fix spacing of divs

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -48,11 +48,28 @@ header img {
   width: 20em;
 }
 
-.about, .contact {
+.about {
   margin: 5% auto 0;
+}
+
+.contact {
+  margin: 5% auto;
+}
+
+.about, .contact {
   background-color: $striped-background;
   width: 90%;
   padding: 2em;
+}
+
+#planner {
+  margin: 0 auto;
+  padding: 2em;
+  width: 90%;
+}
+
+.planner {
+  margin-bottom: 5%;
 }
 
 
@@ -173,7 +190,6 @@ h4 {
 
 .planner {
   position: relative;
-  margin: 1em auto;
 }
 
 .instructions, .overlay {
@@ -267,7 +283,7 @@ h4 {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  height: 2.61em;
+  height: 2.7em;
   border: 0.1em black solid;
   width: 10%;
   text-align: center;
